# self-balancer

./: .gitmodules  README.md
CAD/: platform.SLDPRT
self-balancer/: .gitignore  CMakeLists.txt
self-balancer/HAL/: HAL_LSM6DS3.cpp  HAL_LSM6DS3.hpp  HAL_Motor.cpp  HAL_Motor.hpp  HAL_Wifi.cpp  HAL_Wifi.hpp  HAL_messageQueue.cpp  HAL_messageQueue.hpp  HAL_time.cpp  HAL_time.hpp
self-balancer/application/: CMakeLists.txt
self-balancer/application/comm/: CommManager.cpp  CommManager.hpp
self-balancer/application/dummy/: dummy.cpp  dummy_class.hpp
self-balancer/application/telem/: imu_telem.cpp  imu_telem.hpp  motor_telem.cpp  motor_telem.hpp
self-balancer/application/test/: test_comm_manager.cpp  test_imu_telem.cpp  test_motor_telem.cpp
self-balancer/application/test/mocks/: IMUMock.hpp  MessageQueueMock.hpp  MotorMock.hpp  TimeServerMock.hpp  TransportLayerMock.hpp
self-balancer/devices/: IMU.hpp  MessageQueue.hpp  Motor.hpp  TransportLayer.hpp  channels.hpp  time.hpp  util.hpp
self-balancer/main/: .gitignore  CMakeLists.txt  app.cpp  app.h  config.h  lsm6ds3_reg.c  lsm6ds3_reg.h  main.c  wifi_cmds.c  wifi_cmds.h
self-balancer/messages/header/: header.proto
self-balancer/messages/imu/: imu.proto
self-balancer/messages/telem/: telem.proto
self-balancer/scripts/: format.py  generate_protobuf.py  setup.py  test_application.py  udp_call_response.py  udp_recv_dump.py  udprecv.py
self-balancer/scripts/recv/: channels.py  kalman_filter_test.py  messages.py  processing_utils.py  udp_recv_dump.py  udp_recv_formatter.py
